--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
                   <label for="license-category" class="block text-sm font-medium text-gray-700">Categoría de Licencia</label>
                   <select id="license-category" name="licenseCategory" class="mt-1 block w-full p-2 border rounded-lg" required>
                     <option value="">Seleccionar</option>
-                    <option value="A-I">A-I</option>
-                    <option value="A-IIA">A-IIA</option>
-                    <option value="A-IIB">A-IIB</option>
-                    <option value="A-IIIA">A-IIIA</option>
-                    <option value="A-IIIB">A-IIIB</option>
+                    <option value="Ninguna">Ninguna</option>
+                    <option value="A-I">A-I (Vehiculo utilitario)</option>
+                    <option value="A-IIA">A-IIA (taxis,colectivos)</option>
+                    <option value="A-IIB">A-IIB (Vehiculos livianos-Maquinaria pesada)</option>
+                    <option value="A-IIIA">A-IIIA (Transporte de pasajeros)</option>
+                    <option value="A-IIIB">A-IIIB(Transporte de carga )</option>
+                    <option value="A-IIIC">A-IIIC(Transporte de carga y pasajeros)</option>
                   </select>
                 </div>
 
@@ -202,3 +204,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
